trunk/Archive2/9c/827a0d4c71b5ae/output
main.cpp:4:1: warning: implicit declaration of function ‘strchr’ [-Wimplicit-function-declaration]
 char *ptr = strchr(str, 'W');
 ^
main.cpp:4:13: warning: incompatible implicit declaration of built-in function ‘strchr’ [enabled by default]
 char *ptr = strchr(str, 'W');
             ^
main.cpp:4:1: error: initializer element is not constant
 char *ptr = strchr(str, 'W');
 ^
main.cpp:5:8: error: expected declaration specifiers or ‘...’ before string constant
 printf("%u", ptr);
        ^
main.cpp:5:14: error: expected declaration specifiers or ‘...’ before ‘ptr’
 printf("%u", ptr);
              ^
